# gmail-cli

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  settings.py
gmail_cli/: api_client.py  automate.py  db_helper.py  exceptions.py  utils.py  validate.py
samples/: automate_1.json  emails.csv  emails.json
tests/: __init__.py  test_automate.py  test_db_helper.py  test_validate.py
